--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SOCORRO!</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+
+<div class="container">
+    <label>Mensagem:</label>
+    <textarea></textarea>
+</div>
+
 </body>
 </html>
